entrega/32_k8s_mode_2/20-kafka.yml
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: kafka-local-pv
# spec:
#   capacity:
#     storage: 10Gi
#   accessModes:
#     - ReadWriteOnce
#   persistentVolumeReclaimPolicy: Retain
#   hostPath:
#     path: /data/kafka
#     type: Directory
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: kafka-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 10Gi

---

apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka:3.9.0
        ports:
          - containerPort: 9092
          - containerPort: 9093
